--- a/app/package.json
+++ b/app/package.json
@@ -3,10 +3,11 @@
   "private": true,
   "scripts": {
     "build": "next build && next export",
-    "start": "next dev"
+    "watch": "next dev"
   },
   "dependencies": {
     "@dsyncapp/signaling-events": "^1.0.0",
+    "@geist-ui/icons": "^1.0.1",
     "@nextui-org/react": "^1.0.2-beta.2",
     "@types/async": "^3.2.12",
     "@types/uuid": "^8.3.4",
@@ -14,12 +15,14 @@
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
+    "styled-components": "^5.3.3",
     "uuid": "^8.3.2",
     "yjs": "^13.5.27"
   },
   "devDependencies": {
     "@types/node": "17.0.15",
     "@types/react": "17.0.39",
+    "@types/styled-components": "^5.1.22",
     "eslint": "8.8.0",
     "eslint-config-next": "12.0.10",
     "typescript": "4.5.5"
