--- a/package.json
+++ b/package.json
@@ -1,5 +1,11 @@
 {
+	"scripts": {
+    "watch-server": "cd signaling-server && pnpm watch",
+    "watch-app": "cd app && pnpm watch",
+		"watch": "concurrently -r npm:watch-*"
+	},
 	"devDependencies": {
+		"concurrently": "^7.0.0",
 		"env-cmd": "^10.1.0",
 		"typescript": "4.5.5"
 	}
