--- a/app/package.json
+++ b/app/package.json
@@ -8,10 +8,13 @@
   "dependencies": {
     "@dsyncapp/signaling-events": "^1.0.0",
     "@geist-ui/icons": "^1.0.1",
+    "@hookstate/core": "^3.0.13",
     "@nextui-org/react": "^1.0.2-beta.2",
     "@types/async": "^3.2.12",
     "@types/uuid": "^8.3.4",
     "async": "^3.2.3",
+    "idb": "^7.0.0",
+    "lodash": "^4.17.21",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
@@ -20,6 +23,7 @@
     "yjs": "^13.5.27"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.178",
     "@types/node": "17.0.15",
     "@types/react": "17.0.39",
     "@types/styled-components": "^5.1.22",
