--- a/app/package.json
+++ b/app/package.json
@@ -13,6 +13,7 @@
     "@types/async": "^3.2.12",
     "@types/uuid": "^8.3.4",
     "async": "^3.2.3",
+    "date-fns": "^2.28.0",
     "idb": "^7.0.0",
     "lodash": "^4.17.21",
     "next": "12.0.10",
