--- a/electron-container/tsconfig.json
+++ b/electron-container/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "../tsconfig.base.json",
   "compilerOptions": {
     "declarationDir": "dist/@types",
+    "lib": ["esnext", "dom"],
     "outDir": "dist",
     "rootDir": "src",
     "esModuleInterop": true,
