fix: specify GH_TOKEN env

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -35,4 +35,6 @@ jobs:
         run: pnpm build
 
       - name: Release
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: cd electron-container && pnpm release -- --${{ matrix.target }}
