--- a/app/package.json
+++ b/app/package.json
@@ -26,11 +26,7 @@
   },
   "devDependencies": {
     "@types/lodash": "^4.14.178",
-    "@types/node": "17.0.15",
     "@types/react": "17.0.39",
-    "@types/styled-components": "^5.1.22",
-    "eslint": "8.8.0",
-    "eslint-config-next": "12.0.10",
-    "typescript": "4.5.5"
+    "@types/styled-components": "^5.1.22"
   }
 }
