--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	"devDependencies": {
 		"concurrently": "^7.0.0",
 		"env-cmd": "^10.1.0",
+    "@types/node": "17.0.15",
 		"typescript": "4.5.5"
 	}
 }
