--- a/electron-container/package.json
+++ b/electron-container/package.json
@@ -31,6 +31,9 @@
       "output": "release"
     },
     "mac": {
+      "forceCodeSigning": true,
+      "gatekeeperAssess": false,
+      "identity": "dsync-distribution-cert",
       "category": "public.app-category.video",
       "target": [
         {
