ci: try trust cert

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -38,13 +38,18 @@ jobs:
       - name: Import Code-Signing Certificates
         uses: apple-actions/import-codesign-certs@v1
         with:
-          p12-file-base64: ${{ secrets.APPLE_SIGNING_CERT }}
+          p12-file-base64: ${{ secrets.APPLE_SIGNING_CERT_P12 }}
           p12-password: ${{ secrets.APPLE_SIGNING_CERT_PASSPHRASE }}
+
+      - name: Trust Cert
+        run: |
+          echo -n ${{ secrets.APPLE_SIGNING_CERT_CER }} | base64 -D > cert.cer
+          sudo security add-trusted-cert -d -r trustRoot -p codeSign -k signing_temp.keychain cert.cer
+          rm cert.cer
 
       - name: Release
         env:
           GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          CSC_LINK: ${{ secrets.APPLE_SIGNING_CERT }}
-          # CSC_KEYCHAIN: signing_temp.keychain
+          CSC_KEYCHAIN: signing_temp.keychain
           CSC_KEY_PASSWORD: ${{ secrets.APPLE_SIGNING_CERT_PASSPHRASE }}
         run: cd electron-container && pnpm release -- --${{ matrix.target }}
