--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -44,7 +44,7 @@ jobs:
       - name: Trust Cert
         run: |
           echo -n ${{ secrets.APPLE_SIGNING_CERT_CER }} | base64 -D > cert.cer
-          sudo security add-trusted-cert -d -r trustRoot -p codeSign -k signing_temp.keychain cert.cer
+          security add-trusted-cert -d -r trustRoot -p codeSign -k signing_temp.keychain cert.cer
           rm cert.cer
 
       - name: Release
