--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -38,12 +38,14 @@ jobs:
       - name: Import Code-Signing Certificates
         uses: apple-actions/import-codesign-certs@v1
         with:
+          keychain-password: ${{ github.run_id }}
           p12-file-base64: ${{ secrets.APPLE_SIGNING_CERT_P12 }}
           p12-password: ${{ secrets.APPLE_SIGNING_CERT_PASSPHRASE }}
 
       - name: Trust Cert
         run: |
           echo -n ${{ secrets.APPLE_SIGNING_CERT_CER }} | base64 -D > cert.cer
+          security unlock-keychain -p ${{ github.run_id }} signing_temp.keychain
           security add-trusted-cert -d -r trustRoot -p codeSign -k signing_temp.keychain cert.cer
           rm cert.cer
 
