--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -29,9 +29,7 @@ jobs:
       - name: Trust Cert
         run: |
           echo -n ${{ secrets.APPLE_SIGNING_CERT_CER }} | base64 -D > cert.cer
-          security unlock-keychain -p ${{ github.run_id }} signing_temp.keychain
-          security authorizationdb write com.apple.trust-settings.admin allow
-          security add-trusted-cert -d -r trustRoot -p codeSign -k signing_temp.keychain cert.cer
+          security add-trusted-cert -d -r trustRoot -p codeSign -k signing_temp.keychain cert.cer < $(echo -n ${{ github.run_id }})
           rm cert.cer
 
       - name: Install Node
