refactor: reworked client syncing protocol

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -26,11 +26,10 @@ jobs:
           p12-file-base64: ${{ secrets.APPLE_SIGNING_CERT_P12 }}
           p12-password: ${{ secrets.APPLE_SIGNING_CERT_PASSPHRASE }}
 
-      - name: Trust Cert
-        run: |
-          echo -n ${{ secrets.APPLE_SIGNING_CERT_CER }} | base64 -D > cert.cer
-          echo -n ${{ github.run_id }} | security add-trusted-cert -d -r trustRoot -p codeSign -k signing_temp.keychain cert.cer
-          rm cert.cer
+      # - name: Trust Cert
+      #   run: |
+      #     echo -n ${{ secrets.APPLE_SIGNING_CERT_CER }} | base64 -D > cert.cer
+      #     rm cert.cer
 
       - name: Install Node
         uses: actions/setup-node@v2
