--- a/app/package.json
+++ b/app/package.json
@@ -7,13 +7,11 @@
     "watch": "next dev"
   },
   "dependencies": {
-    "@dsyncapp/signaling-events": "^1.0.0",
+    "@dsyncapp/protocols": "^0.0.1",
     "@geist-ui/icons": "^1.0.1",
     "@hookstate/core": "^3.0.13",
     "@nextui-org/react": "^1.0.2-beta.2",
-    "@types/async": "^3.2.12",
     "@types/uuid": "^8.3.4",
-    "async": "^3.2.3",
     "date-fns": "^2.28.0",
     "idb": "^7.0.0",
     "lodash": "^4.17.21",
