--- a/protocols/tsconfig.json
+++ b/protocols/tsconfig.json
@@ -4,6 +4,7 @@
     "declarationDir": "dist/@types",
     "outDir": "dist",
     "rootDir": "src",
+    "lib": ["ESNext", "DOM"],
     "esModuleInterop": true,
     "skipLibCheck": true,
     "useUnknownInCatchVariables": false
