--- a/signaling-server/package.json
+++ b/signaling-server/package.json
@@ -11,7 +11,7 @@
   "license": "MIT",
   "dependencies": {
     "ws": "^8.4.2",
-    "@dsyncapp/signaling-events": "^1.0.0"
+    "@dsyncapp/protocols": "^0.0.1"
   },
   "devDependencies": {
     "@types/node": "17.0.15",
