--- a/app/package.json
+++ b/app/package.json
@@ -9,6 +9,7 @@
   "dependencies": {
     "@dsyncapp/protocols": "^0.0.1",
     "@geist-ui/icons": "^1.0.1",
+    "@headlessui/react": "^1.5.0",
     "@hookstate/core": "^3.0.13",
     "@nextui-org/react": "^1.0.2-beta.2",
     "@types/uuid": "^8.3.4",
