--- a/electron-container/package.json
+++ b/electron-container/package.json
@@ -14,12 +14,14 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@dsyncapp/protocols": "^0.0.1",
     "@dsyncapp/dsync": "^0.0.1",
+    "@dsyncapp/protocols": "^0.0.1",
+    "lodash": "^4.17.21",
     "uuid": "^8.3.2",
     "ws": "^8.4.2"
   },
   "devDependencies": {
+    "@types/lodash": "^4.14.178",
     "@types/uuid": "^8.3.4",
     "@types/ws": "^8.2.2",
     "electron": "^17.0.0",
