--- a/package.json
+++ b/package.json
@@ -1,14 +1,15 @@
 {
 	"scripts": {
-    "watch-server": "cd signaling-server && pnpm watch",
-    "watch-app": "cd app && pnpm watch",
+		"watch-server": "cd signaling-server && pnpm watch",
+		"watch-app": "cd app && pnpm watch",
 		"watch": "concurrently -r npm:watch-*",
-    "build": "pnpm recursive run build"
+		"build": "pnpm recursive run build"
 	},
 	"devDependencies": {
+		"@types/node": "17.0.15",
 		"concurrently": "^7.0.0",
+		"dotenv": "^16.0.0",
 		"env-cmd": "^10.1.0",
-    "@types/node": "17.0.15",
 		"typescript": "4.5.5"
 	}
 }
