--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,7 @@
     "watch": "next dev"
   },
   "dependencies": {
+    "@dsyncapp/api": "^0.0.1",
     "@dsyncapp/protocols": "^0.0.1",
     "@geist-ui/icons": "^1.0.1",
     "@headlessui/react": "^1.5.0",
@@ -16,6 +17,8 @@
     "date-fns": "^2.28.0",
     "idb": "^7.0.0",
     "lodash": "^4.17.21",
+    "mobx": "^6.4.2",
+    "mobx-react-lite": "^3.3.0",
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
