--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -5,13 +5,14 @@
 
   "description": "Allows the dsync app to control video players discovered in websites",
 
-  "permissions": [
-    "tabs",
-    "webNavigation",
-    "<all_urls>"
-  ],
+  "permissions": ["tabs", "webNavigation", "<all_urls>"],
 
   "background": {
     "scripts": ["dist/polyfill.js", "dist/background.js"]
+  },
+
+  "browser_action": {
+    "default_popup": "./dist/ui/index.html",
+    "default_title": "Open Controller"
   }
 }
