--- a/extension/package.json
+++ b/extension/package.json
@@ -5,20 +5,37 @@
   "main": "dist/index.js",
   "types": "dist/@types/index.js",
   "scripts": {
-    "build": "esbuild src/* --bundle --outdir=dist",
+    "build:ui": "cd ui && next build && next export && cd ../ && rm -rf dist/ui && cp -a ui/out dist/ui",
+    "build": "esbuild ./src/* --bundle --outdir=dist",
     "release": "pnpm build && mkdir -p release && tar -czf release/extension.tar.gz ./dist manifest.json"
   },
   "author": "Julien Vincent",
   "license": "MIT",
   "dependencies": {
-    "@dsyncapp/protocols": "^0.0.1",
     "buffer": "^6.0.3",
-    "uuid": "^8.3.2",
-    "webextension-polyfill": "^0.8.0"
+    "webextension-polyfill": "^0.8.0",
+    "@dsyncapp/api": "^0.0.1",
+    "@dsyncapp/protocols": "^0.0.1",
+    "@dsyncapp/ui-components": "^0.0.1",
+    "@geist-ui/icons": "^1.0.1",
+    "@headlessui/react": "^1.5.0",
+    "@nextui-org/react": "^1.0.2-beta.2",
+    "@types/uuid": "^8.3.4",
+    "lodash": "^4.17.21",
+    "mobx": "^6.4.2",
+    "mobx-react-lite": "^3.3.0",
+    "next": "12.0.10",
+    "react": "17.0.2",
+    "react-dom": "17.0.2",
+    "styled-components": "^5.3.3",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@types/uuid": "^8.3.4",
     "@types/webextension-polyfill": "^0.8.2",
-    "esbuild": "^0.14.23"
+    "esbuild": "^0.14.23",
+    "@types/lodash": "^4.14.178",
+    "@types/react": "17.0.39",
+    "@types/styled-components": "^5.1.22"
   }
 }
