ci: configured extension release

--- a/.github/workflows/release.yaml
+++ b/.github/workflows/release.yaml
@@ -1,7 +1,6 @@
 name: Release
 
 on:
-  push:
   release:
     types: [published]
 
@@ -19,12 +18,12 @@ jobs:
         with:
           version: latest
 
-      - name: Import Code-Signing Certificates
-        uses: apple-actions/import-codesign-certs@v1
-        with:
-          keychain-password: ${{ github.run_id }}
-          p12-file-base64: ${{ secrets.APPLE_SIGNING_CERT_P12 }}
-          p12-password: ${{ secrets.APPLE_SIGNING_CERT_PASSPHRASE }}
+      # - name: Import Code-Signing Certificates
+      #   uses: apple-actions/import-codesign-certs@v1
+      #   with:
+      #     keychain-password: ${{ github.run_id }}
+      #     p12-file-base64: ${{ secrets.APPLE_SIGNING_CERT_P12 }}
+      #     p12-password: ${{ secrets.APPLE_SIGNING_CERT_PASSPHRASE }}
 
       # - name: Trust Cert
       #   run: |
@@ -40,17 +39,26 @@ jobs:
       - name: PNPM Install
         run: pnpm i --frozen-lockfile
 
-      - name: Configure Signaling Server
+      - name: Configure signaling-server
         run: |
-          echo '{"API_ENDPOINT": "188.166.151.111:9987"}' > electron-container/env.json
+          echo '{"API_ENDPOINT": "ws://188.166.151.111:9987"}' > electron-container/env.json
+          echo 'module.exports = {"API_ENDPOINT": "ws://188.166.151.111:9987"}' > extension/env.js
 
       - name: Build
         run: pnpm build
 
-
       - name: Release
-        env:
-          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          CSC_KEYCHAIN: signing_temp.keychain
-          CSC_KEY_PASSWORD: ${{ secrets.APPLE_SIGNING_CERT_PASSPHRASE }}
-        run: cd electron-container && pnpm release -- --${{ matrix.target }}
+        run: pnpm release
+
+      - name: Upload Artifacts to GitHub
+        uses: softprops/action-gh-release@v1
+        if: startsWith(github.ref, 'refs/tags/')
+        with:
+          files: extension/release/extension.tar.gz
+
+      # - name: Release
+      #   env:
+      #     GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+      #     CSC_KEYCHAIN: signing_temp.keychain
+      #     CSC_KEY_PASSWORD: ${{ secrets.APPLE_SIGNING_CERT_PASSPHRASE }}
+      #   run: cd electron-container && pnpm release -- --${{ matrix.target }}
