--- a/webrtc/package.json
+++ b/webrtc/package.json
@@ -5,7 +5,7 @@
   "main": "dist/index.js",
   "types": "dist/@types/index.js",
   "scripts": {
-    "build": "tsc -b"
+    "_build": "tsc -b"
   },
   "author": "Julien Vincent",
   "license": "MIT",
